[package]
name = "lunais"
version = "0.1.0"
edition = "2024"
license = "MIT"

[profile.release]
strip = true
lto = true

[dependencies]
chrono = { version = "*" }
chrono-tz = { version = "*" }
clap = { version = "*", features = ["derive"] }
icalendar = { version = "*" }
axum = { version = "*", default-features = false, features = ["http1", "tokio"] }
tokio = { version = "*", default-features = false, features = ["macros", "rt", "net"] }
askama = { version = "*", default-features = false, features = ["derive", "alloc"] }
tracing = { version = "*", default-features = false }
tracing-subscriber = { version = "*", default-features = false, features = ["fmt"] }
tower-http = { version = "*", default-features = false, features = ["trace"] }
axum-response-cache = { version = "*", default-features = false, features= ["axum08"] }

